--- a/css/style.css
+++ b/css/style.css
@@ -29,19 +29,8 @@
 }
 
 @keyframes up {
-    0%   {top:700px;}
+    0%   {top:20px;}
     100% {top:200px;}
-}
-
-.fadeIn{
-	animation-name: fade;
-	animation-duration: 2s;
-	position: relative;
-}
-
-@keyframes fade {
-    0%   {opacity: 0;}
-    100% {opacity: 100;}
 }
 
 #circle{
@@ -55,6 +44,10 @@
 	border-color: rgb(255, 255, 255);
 }
 
+#circle .subtitle{
+	top:250px;
+	position: relative;
+}
 
 /* SIDENAV */
 #sideNav{
