--- a/css/style.css
+++ b/css/style.css
@@ -58,14 +58,14 @@
     display: none;
 }	
 
-.box{
-	box-shadow: 0 4px 5px rgba(0, 0, 0, 0.1), 0 0 0 1px rgba(0, 0, 0, 0.2);
-}
-
 #closeNav{
 	display: none;
 }
 
+#sideNav{
+	border: solid #e5e5e5;
+	border-width: 1px;
+}
 @media (max-width: 768px) {
     #sideNav {
         display: none;
@@ -116,3 +116,33 @@
 	width: 300px;
 	border-radius: 150px;
 }
+
+/* PROJECTS */
+
+.project{
+	border: solid #999999;
+	border-width: 2px;
+	border-radius: 25px;
+	height: 200px;
+	margin: 5px 20px;
+	margin-bottom: 300px;
+	transition: transform .3s;
+	padding: 0;
+	display: inline;
+}
+
+.project:hover{
+	transform: scale(1.1);
+	cursor: pointer;
+}
+
+.projectImg{
+	width: auto;
+	height: 100%;
+	border-radius: 24px;
+	display: block;
+	margin: 0 auto;
+}
+
+
+
