--- a/css/style.css
+++ b/css/style.css
@@ -112,9 +112,9 @@
 /*ABOUT ME*/
 
 #me{
-	height: 300px;
+	height: auto;
 	width: 300px;
-	border-radius: 150px;
+	border-radius: 0px 150px 150px 150px;
 	margin-left: 15px;
 }
 
@@ -145,5 +145,7 @@
 	margin: 0 auto;
 }
 
-
-
+.whiteSpace{
+	margin: 1px auto;
+	height: 99%;
+}
