--- a/css/style.css
+++ b/css/style.css
@@ -78,7 +78,7 @@ h3{
 	text-align:center;
 	padding: 10px 30px;	
 	margin: 20px 0;
-	border: solid #999999;
+	border: solid #e5e5e5;
 	border-width: 2px;
 	border-radius: 25px;
 }
