--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,6 @@
 body{
 	font-family: 'Roboto', sans-serif;
+	font-size: 20px;
 	overflow-x: hidden;
 	overflow-y: scroll;
 }
@@ -36,6 +37,12 @@ h3{
 .row{
 	margin-bottom: 20px;
 }
+
+.main{
+	padding-top: 50px;
+	
+}
+
 /* SHOWCASE */
 #showcase{
 	background-image: url('../images/showcase.jpg');
@@ -45,7 +52,6 @@ h3{
 	background-size: cover;
 	min-height: 100vh;
 	text-align: center;
-	margin-bottom: 50px;
 	padding-top: 10vh;
 	position: relative;
 }
