--- a/css/style.css
+++ b/css/style.css
@@ -76,6 +76,15 @@ h3{
 	position: relative;
 }
 
+.vignette {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  box-shadow: 0 0 200px rgba(0,0,0,0.9) inset;
+}
+
 .headerOverlay{
 	position: absolute;
 	top: 0;
