--- a/css/style.css
+++ b/css/style.css
@@ -189,7 +189,27 @@ h3{
   display: inline-block;
 }
 
+.center {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 100%;
+  transition: .5s ease;
+  border-radius: 20px;
+}
 
+.overlay{
+	transition: .5s ease;
+	background-color: black;
+}
+
+.overlay:hover .center{
+	opacity: 0.3;
+}
+.overlay:hover .overlay{
+
+	opacity: 1;
+}
 
 /* CONTACT */
 #email{
